# lmu_settings_widget

./: .gitignore  README.md  app.spec  lmu_settings_widget_win64_setup.iss  pyproject.toml
data/default_presets/: High.json  VR-High.json  VR-Sharp.json  gfx_High-Sharp.json  gfx_High.json  gfx_VR-High.json  gfx_VR-PiMax.json  gfx_VR-PiMed.json  gfx_VR-Sharp.json  gfx_VR-Sharp__OpenXR_.json
scripts/: app.py  build.py  patch_sdl_pygame.py
src/lmu/: app_settings.py  directInputKeySend.py  eel_mod.py  globals.py  http.py  lmu_game.py  lmu_location.py  present_mon_wrapper.py  process.py  rf2command.py  rf2connect.py  rf2events.py  rf2replays.py  rf2results.py  sim_info_api.py  utils.py
src/lmu/app/: __init__.py  app_benchmark_fn.py  app_content_fn.py  app_controller.py  app_controller_fn.py  app_dashboard_fn.py  app_launch.py  app_launch_fn.py  app_main.py  app_main_fn.py  app_presets.py  app_presets_fn.py  app_replay.py  app_replay_fn.py  app_results.py  app_rfconnect.py  app_rfconnect_fn.py  enable_cors.py  event_loop.py  performance_api.py
src/lmu/benchmark/: benchmark.py  benchmark_utils.py  fpsvr.py  fpsvr_result.py  present_mon_const.py  present_mon_wrapper.py  result.py
src/lmu/crystools/: __init__.py  gpu.py  hardware.py  hdd.py
src/lmu/greenlets/: gamecontroller.py  rf2greenlet.py
src/lmu/mods/: ext_applications.py  kneeboard.py  openxr.py  oxr_toolkit.py  vrtoolkit.py
src/lmu/preset/: preset.py  settings_model.py
src/lmu/pylmusharedmemory/: License.txt  README.md  lmu_data.py  lmu_mmap.py  lmu_type.py
src/lmu/rf2sharedmem/: rF2data.py  sharedMemoryAPI.py
src/lmu/settingsdef/: controls.py  generic.py  graphics.py
src/lmu/valve/: steam_utils.py
tests/: conftest.py
tests/data/input/: oxr_toolkit_reg_values.json
tests/data/input/Le Mans Ultimate/Core/: Version.txt
tests/lmu/: controller.py  ext_applications.py  lmu_sim_info_api.py  oxr_toolkit.py  present_mon.py  preset.py  replay.py  reshade_openxr.py  results.py  rf2connect.py  settings.py  steam.py  vrtoolkit.py
vue/: .env.development  .env.production  .eslintrc.js  index.html  package-lock.json  package.json  vite.config.js
vue/public/: index.html
vue/src/: App.vue  fuelData.js  main.js
vue/src/assets/: app.scss  dashboard.css  kneeboard.css  navbar.css  perf_info.css  rf_Cover.blend
vue/src/components/: ControllerDeviceList.vue  LaunchRfactorBtn.vue  MainPage.vue  RfLocation.vue  RfactorOverlay.vue  SessionArea.vue  Updater.vue  Wiki.vue
vue/src/components/benchmark/: Benchmark.vue  BenchmarkResultArea.vue
vue/src/components/pages/: DashBoard.vue  FuelCalc.vue  GraphicsArea.vue  KneeBoard.vue  KneeBoardHelp.vue  PerformanceMonitor.vue  PitWall.vue  PreferencesPage.vue  RaceSchedule.vue  ReplayArea.vue  ServerBrowser.vue  Wiki.vue
vue/src/components/presets/: ControlsPresetArea.vue  GraphicsPresetArea.vue  PresetHandler.vue  PresetUi.vue  RfactorContentCard.vue
vue/src/components/settings/: ControllerAssignment.vue  SettingItem.vue  SettingsCard.vue
vue/src/components/widgets/: ControllerDeviceList.vue  FrameEmbed.vue  HardwareInfo.vue  LaunchRfactorBtn.vue  Log.vue  MessageArea.vue  PerformanceInfo.vue  PitStrategy.vue  ReplayList.vue  ResultDisplay.vue  ResultDriver.vue  RfLocation.vue  RfactorOverlay.vue  Updater.vue
(+22 files in other folders)
