[project]
name = "lmu-settings-widget"
version = "0.8.1"
description = ""
authors = [
  { name = "Stefan Tapper", email = "tapper.stefan@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "eel==0.18.2",
  "bottle==0.13.4",
  "appdirs>=1.4.4, <2.0.0",
  "pygame==2.4.0",
  "psutil==7.0.0",
  "gevent-websocket==0.10.1",
  "gevent==25.5.1",
  "lxml==6.0.0",
  "iniconfig==2.1.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.9.0, <7.0.0",
  "pyinstaller-hooks-contrib>=2024.7",
  "pywin32-ctypes>=0.2.0",
  "pytest>=8.3.3, <9.0.0",
  "mypy-extensions==1.1.0",
  "black==25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmu"]

[tool.hatch.build.targets.sdist]
include = [
   "/src",
   "/tests",
   "/pyproject.toml",
   "/README.md",
   "/LICENSE.txt", # Beispiel
]

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
