[project]
name = "lmu-settings-widget"
version = "1.1.1"
description = ""
authors = [
  { name = "Stefan Tapper", email = "tapper.stefan@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "eel==0.18.2",
  "bottle==0.13.4",
  "appdirs>=1.4.4, <2.0.0",
  "pygame==2.6.1",
  "psutil==7.2.2",
  "gevent==25.9.1",
  "lxml==6.0.2",
  "py-cpuinfo==9.0.0",
  "nvidia-ml-py==13.595.45",
  "greenlet==3.3.2",
]

[dependency-groups]
dev = [
  "ruff>=0.15.7",
  "pyinstaller>=6.19.0, <7.0.0",
  "pyinstaller-hooks-contrib>=2026.3",
  "pywin32-ctypes>=0.2.0",
  "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmu"]

[tool.hatch.build.targets.sdist]
include = [
   "/src",
   "/tests",
   "/pyproject.toml",
   "/README.md",
   "/LICENSE.txt", # Beispiel
]

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
